# HandOfLesser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build_installer.bat  installer.nsi  register_dev_driver.bat
HandOfLesser/: CMakeLists.txt  HandOfLesser.cpp  HandOfLesser.h  HandOfLesserCore.cpp  HandOfLesserCore.h  HandTracking.h  HandTrackingInterface.h  InstanceHolder.h  TrackedHand.cpp  TrackedHand.h  XrUtils.h
HandOfLesser/src/: HandOfLesser.cpp  HandOfLesser.h  HandOfLesserCore.cpp  HandOfLesserCore.h  HandTracking.cpp  HandTracking.h  HandTrackingInterface.cpp  HandTrackingInterface.h  InstanceHolder.cpp  InstanceHolder.h  TrackedHand.cpp  TrackedHand.h  XrEventsInterface.h  XrUtils.cpp  XrUtils.h  display_global.cpp  display_global.h  hand_pose.h  math_utils.cpp  math_utils.h  openxr_hacks.cpp  openxr_hacks.h  openxr_hand.cpp  openxr_hand.h  settings_global.cpp  settings_global.h  simple_gesture.h  simple_gesture_detector.cpp  simple_gesture_detector.h  user_interface.cpp  user_interface.h
HandOfLesser/src/core/: HandOfLesserCore.cpp  HandOfLesserCore.h  app_paths.h  features_manager.cpp  features_manager.h  runtime_state.h  settings_global.cpp  settings_global.h  state_global.cpp  state_global.h
HandOfLesser/src/core/ui/: display_global.cpp  display_global.h  ui_gesture_debug.cpp  ui_gesture_debug.h  ui_graphics.cpp  ui_graphics.h  user_interface.cpp  user_interface.h  visualizer.cpp  visualizer.h
HandOfLesser/src/hands/: gesture_binding_builder.cpp  gesture_binding_builder.h  hand_pose.h  sided_joint.h  simple_gesture.h  simple_gesture_detector.cpp  simple_gesture_detector.h
HandOfLesser/src/hands/action/: base_action.cpp  base_action.h  button_action.cpp  button_action.h  hand_drag_action.cpp  hand_drag_action.h  trigger_action.cpp  trigger_action.h
HandOfLesser/src/hands/gesture/: above_below_curl_plane_gesture.cpp  above_below_curl_plane_gesture.h  aim_gesture.cpp  aim_gesture.h  aim_state_gesture.cpp  aim_state_gesture.h  base_gesture.cpp  base_gesture.h  chain_gesture.cpp  chain_gesture.h  combo_gesture.cpp  combo_gesture.h  facing_gesture.cpp  facing_gesture.h  finger_curl_gesture.cpp  finger_curl_gesture.h  gate_gesture.cpp  gate_gesture.h  hold_gesture.cpp  hold_gesture.h  inverse_gesture.cpp  inverse_gesture.h  line_proximity_gesture.cpp  line_proximity_gesture.h  look_at_gesture.cpp  look_at_gesture.h  open_hand_pinch_gesture.cpp  open_hand_pinch_gesture.h  palm_facing_gesture.cpp  palm_facing_gesture.h  (+2 more)
HandOfLesser/src/oculus/: oculus_hacks.cpp  oculus_hacks.h
HandOfLesser/src/openxr/: HandTracking.cpp  HandTracking.h  HandTrackingInterface.cpp  HandTrackingInterface.h  InstanceHolder.cpp  InstanceHolder.h  XrUtils.cpp  XrUtils.h  body_tracking.cpp  body_tracking.h  openxr_body.cpp  openxr_body.h  openxr_hand.cpp  openxr_hand.h  openxr_state.cpp  openxr_state.h  xr_hand_utils.cpp  xr_hand_utils.h
HandOfLesser/src/steamvr/: input_wrapper.cpp  input_wrapper.h  skeletal_input.cpp  skeletal_input.h  steamvr_input.cpp  steamvr_input.h  steamvr_setup.cpp  steamvr_setup.h
HandOfLesser/src/util/: hol_utils.cpp  hol_utils.h
HandOfLesser/src/vrchat/: vrchat_input.cpp  vrchat_input.h  vrchat_osc.cpp  vrchat_osc.h
HandOfLesser/src/windows/: console_log.cpp  console_log.h  crash_handler.cpp  crash_handler.h  windows_utils.cpp  windows_utils.h
HandOfLesserCommon/: CMakeLists.txt
HandOfLesserCommon/include/: HandOfLesserCommon.h  HandSimulationDefs.h
HandOfLesserCommon/src/: finger_bend.cpp  finger_bend.h  hand.h  struct.h  tracking_state.cpp  tracking_state.h  version.h
HandOfLesserCommon/src/controller/: controller.cpp  controller.h
HandOfLesserCommon/src/hand/: finger_bend.cpp  finger_bend.h  hand.h
HandOfLesserCommon/src/json/: serializer.h  types.h
HandOfLesserCommon/src/math/: fingers.cpp  fingers.h  math_utils.cpp  math_utils.h  utils.cpp  utils.h
HandOfLesserCommon/src/openxr/: openxr_state.h
HandOfLesserCommon/src/packet/: nativepacket.h
HandOfLesserCommon/src/settings/: settings.cpp  settings.h
HandOfLesserCommon/src/state/: state.h
HandOfLesserCommon/src/steamvr/: input_wrapper.cpp  input_wrapper.h  skeletal_input_joints.h
HandOfLesserCommon/src/transport/: itransport.h  namedpipetransport.cpp  namedpipetransport.h  nativetransport.cpp  nativetransport.h  transport.cpp  transport.h  transportutil.cpp  transportutil.h  udptransport.cpp  udptransport.h
HandOfLesserCommon/tests/: test_example.cpp
HandOfLesserDriver/: CMakeLists.txt
HandOfLesserDriver/00handoflesser/: driver.vrdrivermanifest
HandOfLesserDriver/00handoflesser/resources/: driver.vrresources
HandOfLesserDriver/HandOfLesserDriver/: CMakeLists.txt  README.md  simplecontroller.vcxproj
HandOfLesserDriver/HandOfLesserDriver/handoflesser/: driver.vrdrivermanifest
HandOfLesserDriver/HandOfLesserDriver/src/: controller_device_driver.cpp  controller_device_driver.h  device_provider.cpp  device_provider.h  emulated_controller_driver.h  hand_of_lesser.cpp  hand_of_lesser.h  hand_simulation.cpp  hand_simulation.h  hooked_controller.cpp  hooked_controller.h
HandOfLesserDriver/src/: hand_simulation.cpp  hand_simulation.h
HandOfLesserDriver/src/controller/: controller_common.cpp  controller_common.h  emulated_controller_driver.cpp  emulated_controller_driver.h  emulated_input_profile.h  generic_control_interface.h  hooked_controller.cpp  hooked_controller.h
HandOfLesserDriver/src/core/: hand_of_lesser.cpp  hand_of_lesser.h
HandOfLesserDriver/src/driver/: device_provider.cpp  device_provider.h  hmd_driver_factory.cpp
HandOfLesserDriver/src/hooking/: Hooking.h  hooks.cpp  hooks.h
HandOfLesserDriver/src/input/: InputCommons.h
HandOfLesserDriver/src/tracker/: emulated_tracker_driver.cpp  emulated_tracker_driver.h
HandOfLesserDriver/src/utils/: app_launcher.cpp  app_launcher.h  math_utils.cpp  math_utils.h
HandOfLesserDriver/utils/: CMakeLists.txt
HandOfLesserDriver/utils/driverlog/: CMakeLists.txt  driverlog.cpp  driverlog.h
HandOfLesserDriver/utils/vrmath/: CMakeLists.txt  vrmath.h
(+53 files in other folders)
